--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -1,9 +1,5 @@
 /* Style for card */
 
-/* .container{
-
-} */
-
 .card {
     padding: 20px;
     box-sizing: border-box;
@@ -11,15 +7,37 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     background: white;
-    flex: 0 0 calc(90%/var(--items-per-screen));
-    margin: 0 5%;
+    flex: 0 0 90%;
+    margin: 5%;
     height: 500px;
+    position: relative;
 }
 
 .card:hover {
     box-shadow: 0 0 1rem -0.2rem black;
+}
+
+.heart{
+    position: absolute;
+    right: 10px;
+    top: 10px;    
+    z-index: 5;
+    padding: 5px;
+    box-shadow: 0 0 1rem -0.4rem black;
+    height: 25px;
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.heart img{
+    height: 20px;
+    width: 20px;
 }
 
 .imgContainer {
@@ -63,14 +81,27 @@
     border: 1px solid purple;
 }
 
+.standardStar{
+    padding: 2px 3px;
+    color: white;
+    background-color: #388E3C;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 45px;
+    border-radius: 5px;
+    font-weight: 600;
+}
+
 .stars{
     display: flex;
+    align-items: center;
     margin: 5px 0;
 }
 
 .star{
-    height: 25px;
-    width: 25px;
+    height: 15px;
+    width: 15px;
     margin-right: 3px;
 }
 
@@ -110,39 +141,6 @@
     color: red;
 }
 
-.countContainer {
-    font-size: 1.2rem;
-}
-
-.countBtn {
-    border: 2px black solid;
-    background-color: black;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.3rem;
-}
-
-.countBtn:hover {
-    background-color: white;
-    color: black;
-}
-
-.plus {
-    border-radius: 0 5px 5px 0;
-    padding: 2px 7px;
-}
-
-.minus {
-    border-radius: 5px 0 0 5px;
-    padding: 2px 8px;
-}
-
-.quantity {
-    border-bottom: 2px solid black;
-    border-top: 2px solid black;
-    padding: 4px 6px;
-}
-
 @media screen and (min-width: 500px) {
     .card{
         flex: 0 0 calc(50%/var(--items-per-screen));
@@ -152,9 +150,20 @@
 
 @media screen and (min-width: 800px) {
     .card {
-        flex: 0 0 calc(25%/var(--items-per-screen));
+        flex: 0 0 30%;
     }
     .img{
+        width: 220px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .card {
+        flex: 0 0 calc(24%);
+        margin: 0.5%;
+    }
+
+    .img {
         width: 220px;
     }
 }
