--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -5,6 +5,16 @@
     width: 100vw;
 }
 
+.navRow{
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 0.5rem -0.2rem black;
+    width: fit-content;
+    height: 100vh;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
 .left {
     margin: 10px 0;
 }
@@ -20,6 +30,22 @@
     margin: 0;
 }
 
+.navListRow{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.brandRow{
+    flex-direction: column;
+}
+
+
+
 .icon{
     height: 25px;
     width: 25px;
@@ -33,11 +59,27 @@
     margin-left: 15px;
 }
 
+.brandlogoRow{
+    padding: 5px;
+    background-color: red;
+    border-radius: 50%;
+}
+
 .navItem{
     text-decoration: none;
     display: flex;
     align-items: center;
     margin: 10px;
+    color: black;
+    font-weight: 600;
+}
+
+.navItemRow{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 10px;
     color: black;
     font-weight: 600;
 }
